--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,11 @@ a {
 	color: black;
 }
 
+.send-btn{
+	border-radius: 0 .25rem .25rem 0;
+	padding: 5px 15px;
+}
+
 /* Chat Page */
 
 .chat-container {
@@ -149,6 +154,10 @@ a {
 	color: rgb(177, 177, 177)!important;
 }
 
+.text{
+	margin-bottom: 0;
+}
+
 /* Join Page */
 .join-container {
 	max-width: 500px;
@@ -187,32 +196,20 @@ a {
 	margin-bottom: 20px;
 }
 
-.join-main .form-control {
-	margin-bottom: 20px;
-}
-
 .join-main label {
 	display: block;
 	margin-bottom: 5px;
 }
 
-.join-main input[type='text'] {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
-	width: 100%;
-}
-
-.join-main select {
-	font-size: 16px;
-	padding: 5px;
-	height: 40px;
-	width: 100%;
-}
-
 .join-main .btn {
 	margin-top: 20px;
 	width: 100%;
+	border: 1px solid black;
+}
+
+.join-main .btn:hover {
+	background-color: #3d3d3d;
+	color: white;
 }
 
 /* Footer */
