--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -104,6 +104,7 @@ a {
 	padding: 30px;
 	max-height: 500px;
 	overflow-y: scroll;
+	background-color: #ebf0f1;
 }
 
 .chat-messages .message {
@@ -111,18 +112,18 @@ a {
 	margin-bottom: 15px;
 	background-color: var(--light-color);
 	border-radius: 5px;
+	word-wrap: break-word;
 }
 
 .chat-messages .message .meta {
 	font-size: 15px;
-	font-weight: bold;
-	color: var(--dark-color-b);
+	font-weight: lighter;
 	opacity: 0.7;
 	margin-bottom: 7px;
 }
 
 .chat-messages .message .meta span {
-	color: #777;
+	color: rgb(136, 136, 136);
 }
 
 .chat-form-container {
@@ -142,7 +143,12 @@ a {
 }
 
 .backgroundDark{
-	background-color:var(--black-color)!important;
+	background-color: #3C83C2!important;
+	color: white!important;
+}
+
+.backgroundAdmin{
+	background-color: #4FAD80!important;
 	color: white!important;
 }
 
@@ -151,11 +157,21 @@ a {
 }
 
 .userTime{
-	color: rgb(177, 177, 177)!important;
+	color: rgb(204, 204, 204)!important;
 }
 
 .text{
 	margin-bottom: 0;
+}
+
+.userMessage{
+	width: 400px;
+}
+
+.welcomeText{
+	color: rgb(59, 59, 59)!important;
+	font-style: italic;
+	text-align: center;
 }
 
 /* Join Page */
@@ -218,6 +234,10 @@ a {
 	padding: 20px;
 	text-align: center;
 	font-size: 13px;
+}
+
+.source-code-footer p{
+	margin: 0;
 }
 
 .source-code-footer a{
