--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -229,6 +229,19 @@ a {
 	color: white;
 }
 
+/* Loading Screen */
+.loaderContainer{
+}
+
+.spinner-border{
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
 /* Footer */
 .source-code-footer{
 	padding: 20px;
