--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,11 +47,10 @@ a {
 
 .send-btn{
 	border-radius: 0 .25rem .25rem 0;
-	padding: 5px 15px;
+	padding: 6px 15px;
 }
 
 /* Chat Page */
-
 .chat-container {
 	max-width: 1100px;
 	background: #fff;
@@ -138,7 +137,8 @@ a {
 .chat-form-container input[type='text'] {
 	font-size: 16px;
 	padding: 5px;
-	height: 40px;
+	padding-left: 15px;
+	height: 38px;
 	flex: 1;
 }
 
@@ -172,6 +172,33 @@ a {
 	color: rgb(59, 59, 59)!important;
 	font-style: italic;
 	text-align: center;
+}
+
+.emojiButton{
+	padding: 5px 15px;
+	background-color: #ffffff;
+	border-radius: 0;
+	border: 1px solid #212121;
+	color: #212121;
+	box-shadow: none!important;
+}
+
+.emojiButton:hover{
+	background-color: #212121;
+}
+
+#msg{
+	border-radius: 0;
+	border: 1px solid #212121;
+	outline: none!important;
+}
+
+.chatForm{
+	margin-bottom: 0px!important;
+}
+
+.emojiContainer{
+	position: absolute;
 }
 
 /* Join Page */
@@ -230,9 +257,6 @@ a {
 }
 
 /* Loading Screen */
-.loaderContainer{
-}
-
 .spinner-border{
 	position: absolute;
 	top:0;
@@ -276,6 +300,10 @@ a {
 	}
 
 	.chat-sidebar {
+		display: none;
+	}
+
+	.fa-paper-plane{
 		display: none;
 	}
 }
